import React from 'react';
import {StoryFn, Meta} from '@storybook/react';
import {
  MultiSelectCheckboxes,
  TMultiSelectCheckboxesProps,
} from './MultiSelectCheckboxes';

export default {
  component: MultiSelectCheckboxes,
} as Meta;

const Template: StoryFn<TMultiSelectCheckboxesProps> = args => (
  <ul>
    <MultiSelectCheckboxes {...args} />
  </ul>
);

const options = [
  {id: 'NL', libelle: 'Non labellisé'},
  {id: '1', libelle: 'Première étoile'},
  {id: '2', libelle: 'Deuxième étoile'},
  {id: '3', libelle: 'Troisième étoile'},
  {id: '4', libelle: 'Quatrième étoile'},
  {id: '5', libelle: 'Cinquième étoile'},
];

const selectionTousParDefautArgs: TMultiSelectCheckboxesProps = {
  htmlId: 'exemple',
  title: 'Niveau de labellisation',
  options: options,
  selected: [],
  onChange: (selected: string[]) => {
    console.log(selected);
  },
};

export const SelectionTousParDefaut = {
  render: Template,
  args: selectionTousParDefautArgs,
};

const selectionMultipleArgs: TMultiSelectCheckboxesProps = {
  htmlId: 'exemple',
  title: 'Niveau de labellisation',
  options: options,
  selected: ['NL', '1'],
  onChange: (selected: string[]) => {
    console.log(selected);
  },
};

export const SelectionMultiple = {
  render: Template,
  args: selectionMultipleArgs,
};
